# SpeakWith

./: .env.example  AGENTS.md  CLAUDE.md  LICENSE  README.md  STATUS.md  pyproject.toml
speakwith/: __init__.py  config.py  main.py  models.py
speakwith/audio/: AGENTS.md  __init__.py  recorder.py
speakwith/cli/: AGENTS.md  __init__.py  display.py  input_handler.py
speakwith/llm/: AGENTS.md  __init__.py  base.py  openai_client.py
speakwith/memory/: AGENTS.md  __init__.py  conversation.py
speakwith/modes/: AGENTS.md  __init__.py  conversation_modes.py
speakwith/pipeline/: AGENTS.md  __init__.py  coordinator.py
speakwith/profiles/: AGENTS.md  __init__.py  loader.py
speakwith/suggestions/: AGENTS.md  __init__.py  generator.py
speakwith/transcription/: AGENTS.md  __init__.py  whisper_client.py
user_data/: background.md  mood_board.md
